--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pagamentos">
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    package="com.hedie.eyemobile">
+
     <application
-        android:name=".pagamentos.MyApp"
+        android:name="com.hedie.eyemobile.app.EyeMobileApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.NoActionBar">
-        <activity android:name=".pagamentos.view.PagamentosActivity">
+        android:theme="@style/AppTheme">
+        <activity android:name="com.hedie.eyemobile.app.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
