--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     implementation 'me.relex:circleindicator:2.1.4'
 //    implementation 'me.relex:circleindicator:2.1.4'
 
+    implementation 'com.google.code.gson:gson:2.8.5'
+
 
 
 }
