--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,15 @@
     package="com.hedie.eyemobile">
 
     <application
-        android:name="com.hedie.eyemobile.app.EyeMobileApplication"
+        android:name=".app.EyeMobileApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.hedie.eyemobile.app.MainActivity">
+        <activity android:name=".feature.presentation.view.Receipt.ReceiptActivity"></activity>
+        <activity android:name=".app.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
